Improve more icon in mobile when logged out, fix alignment

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   2.0.0rc53 */
+   2.0.0rc54 */
 
 /* CSS variables */
 :root {
@@ -3724,8 +3724,8 @@ body.embed .button.logo-button:hover,
   }
 
   .columns-area__panels__pane--navigational .column-link__icon.icon-ellipsis-h {
+    background-image: var(--icon-more);
     position: relative;
-    top: -4px;
   }
 
   .layout-multiple-columns .columns-area__panels__main > div,
@@ -3797,6 +3797,8 @@ body.embed .button.logo-button:hover,
   }
 
   .layout-multiple-columns .navigation-panel .navigation-panel__legal {
+    display: flex;
+    justify-content: center;
     order: 999;
     text-align: center;
   }
